syntax = "proto3";

package messages;

option java_multiple_files = true;
option java_package = "hive.svc.messages";
option java_outer_classname = "MessagesSvc";

import "common.proto";

// Messages service definition.
service Messages {
  rpc GetMessages (MessageFilter) returns (MessageEnvelope);

  rpc SendMessage (MessageEnvelope) returns (MessageSendResult);
}

message MessageFilter {
  enum State {
    UNKNOWN = 0;
    NEW = 1;
  }

  State state = 1;
  common.Peer dst = 2;
}

message MessageEnvelope {
  Payload payload = 1;
  common.EncryptionParameters params = 2;

  common.Peer dst = 3;
}

message Payload {
  bytes encrypted_content = 1;

  common.KeyExchange key_ex = 2;
}

message MessageSendResult {
  //TODO
}

